--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ install:
 build_script:
   - cmd: |
       call venv\Scripts\activate.bat
-      pyinstaller --name=lights lights\__init__.py
+      pyinstaller --onefile --name=lights lights\__init__.py
       call deactivate
 
 artifacts:
